# uvl-analytics-concepts-frequency

./: .gitignore  Dockerfile  Fcic  README.md  Rbai  app.py  config_rbai.json  fcic.py  find_occurences.py  rbai.py  requirements.txt  validate_test_input.py
lib/: CMakeLists.txt  find_occurences.h  main.cpp  main_fcic.cpp  main_rbai.cpp  main_tokenize.cpp
lib/res/: interview_data_normal.xlsx  lemmatization-en.txt  stopwords.txt
lib/src/dtree/: DT.cpp  decision_tree.cpp  decision_tree.h
lib/src/graph/: concept_node.h  term.h
lib/src/io/: json.h
lib/src/model/: accepter_algo_1.h  accepter_rbai.h  algo_1_model.h  corpus_parser.h  file_accepter.h  frequency_accepter.h  frequency_corpus_parser.h  frequency_model.h  frequency_rbai_model.h  model.h  model_depth_wrapper.h  pipeline.h
lib/src/model_builder/: algorithm_runner.h  directory_walker.h  frequency_manager.h  xml_reader.h
lib/src/util/: math_util.h  str_util.h
